@@ -65,6 +65,7 @@ class Request extends Message implements RequestInterface {
 
         $r = self::createFromServerArray($_SERVER);
         $r->setBody(fopen('php://input','r'));
+        $r->setPostData($_POST);
         return $r;
 
     }
@@ -250,4 +251,33 @@ class Request extends Message implements RequestInterface {
 
     }
 
+    /**
+     * Sets the post data.
+     *
+     * This is equivalent to PHP's $_POST superglobal.
+     *
+     * This would not have been needed, if POST data was accessible as
+     * php://input, but unfortunately we need to special case it.
+     *
+     * @param array $postData
+     * @return void
+     */
+    public function setPostData(array $postData) {
+
+        $this->postData = $postData;
+
+    }
+
+    /**
+     * Returns the POST data.
+     *
+     * This is equivalent to PHP's $_POST superglobal.
+     *
+     * @return array
+     */
+    public function getPostData() {
+
+        return $this->postData;
+
+    }
 }
