@@ -59,4 +59,26 @@ interface RequestInterface extends MessageInterface {
      */
     function setRawServerData(array $data);
 
+    /**
+     * Sets the post data.
+     *
+     * This is equivalent to PHP's $_POST superglobal.
+     *
+     * This would not have been needed, if POST data was accessible as
+     * php://input, but unfortunately we need to special case it.
+     *
+     * @param array $postData
+     * @return void
+     */
+    function setPostData(array $postData);
+
+    /**
+     * Returns the POST data.
+     *
+     * This is equivalent to PHP's $_POST superglobal.
+     *
+     * @return array
+     */
+    function getPostData();
+
 }
