@@ -6,6 +6,7 @@
 	* Added: Response::send
 	* Added: Request::getQueryParameters
 	* Added: Utility for dealing with HTTP dates.
+	* Added: Request::setPostData and Request::getPostData
 	* Removed: Response::sendBody
 
 0.0.1-alpha (2012-10-07)
